--- a/hoko/4p(183~184)/4-2.html
+++ b/hoko/4p(183~184)/4-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4-2</title>
 </head>
 
 <body>
@@ -12,7 +12,6 @@
     <div class="fnArea"></div>
 
     <script>
-        const conditionsElement = document.getElementById("conditions");
 
         const ranking_list = ["サッカー選手・監督", "野球選手・監督", "医者", "ユーチューバー"];
         const olArea = document.createElement("ol");
